<resources>
    <string name="app_name">workers app</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_enter_Location_id">Please enter your location.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_location_name">Location</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we will send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Check your email to reset your password! \"</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="tracking_location">Tracking Location</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_activity_dash_bord">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <string name="action_add_product">Add Product</string>

    <string name="title_add_gig">ADD GIG</string>
    <string name="et_hint_work_title">Work Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_work_related_description">Work Description</string>
    <string name="et_hint_phone_number">Mobile Number</string>

    <string-array name="Category_array">
        <item>Mason</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Color Man</item>
        <item>Cleaner</item>
        <item>Craft Man</item>
        <item>Mover</item>
    </string-array>
    <string name="product_delete_success_message">Your gig is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete your gig?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">Your Gig is uploaded successfully.</string>
    <string name="no_products_added_yet">No Workers yet!</string>
    <string name="no_dashboard_item_found">No Workers found!</string>
    <string name="please_click_back_again_to_exit">please doubble tap to exit</string>
    <string name="title_product_details">Workers DETAILS</string>
    <string name="lbl_product_description">Number:  </string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="lbl_call">Call 📞</string>

    <string name="get_current_location_button">Get Current Location</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.
    </string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed for core
        functionality.
    </string>
    <string name="permission_approved_explanation">You approved FINE location, carry (and click) on!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>