<?xml version="1.0" encoding="utf-8"?>
<!--TODO Step 2: Design the settings screen layout-->
<!--START-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".activites.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height">

            <ImageView
                android:id="@+id/iv_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/background" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_user_image"
            android:layout_width="@dimen/settings_user_image_size"
            android:layout_height="@dimen/settings_user_image_size"
            android:layout_below="@id/fl_header_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_user_image_marginTop">

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/settings_user_picture_margin"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
      />
        </FrameLayout>

        <com.example.workersapp.utils.BullinaTextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_edit_label_textSize"
            android:layout_alignParentRight="true" />




        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_user_image"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">

            <com.example.workersapp.utils.JoseTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:textSize="@dimen/settings_name_textSize"
                android:text="MR John Smith"

                />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">


            <com.example.workersapp.utils.JoseTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_info_textSize"
                android:text="JhonSmith@gmail.com" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">



            <com.example.workersapp.utils.JoseTextView
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_info_textSize"
                android:text="01981155112" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/number"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">

            <com.example.workersapp.utils.JoseTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_lbl_addresses_margin"
                android:layout_weight="1"
                android:text="Chittagong"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_lbl_addresses_textSize" />



        </LinearLayout>

        <com.example.workersapp.utils.WKButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
            android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
            android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
            android:background="@drawable/roundedbutton"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize" />

    </RelativeLayout>
</ScrollView>
