<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.GigDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <FrameLayout
                android:id="@+id/iv_product_detail_frame"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/iv_product_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/product_detail_image_height"
                    android:background="@color/colorImageViewBackground"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    />


             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:layout_marginLeft="120dp"
                 >

                 <ImageView
                     android:id="@+id/iv_user_photo"
                     android:layout_width="140dp"
                     android:layout_height="150dp"
                     android:layout_margin="@dimen/settings_user_picture_margin"
                     android:contentDescription="@string/content_description"
                     android:src="@drawable/ic_user_placeholder" />
             </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_product_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"

                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_detail_frame">

                <com.example.workersapp.utils.BullinaTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workers Name:  "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    />



                <com.example.workersapp.utils.JoseTextView
                    android:id="@+id/tv_product_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/product_details_title_textSize"
                    tools:text="Workers Name"


                    />


            </LinearLayout>




            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"
                android:orientation="vertical"
                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_name">


                <com.example.workersapp.utils.BullinaTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workers Title:  "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    />

                <com.example.workersapp.utils.JoseTextView
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_title_textSize"
                    tools:text="workers Title" />

                <com.example.workersapp.utils.BullinaTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workers Description:  "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    />

                <com.example.workersapp.utils.JoseTextView
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_price_textSize"
                    tools:text="description" />
            </LinearLayout>

            <com.example.workersapp.utils.BullinaTextView
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:text="@string/lbl_product_description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/product_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price" />

            <com.example.workersapp.utils.JoseTextView
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/product_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                tools:text="This is product details description." />

            <com.example.workersapp.utils.WKButton
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedbutton"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/lbl_call"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_details_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>